--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ html,body{
     width: 100%;
     overflow-x: hidden;
 }
+
+.container{
+    margin:0 auto;
+    
+}
 .fimg{
     width: 31px;
     height: 30px;
